# go_kurit_server

./: CMakeLists.txt
result/: go_kurit_server
sources/domain_layer/: message_traits.h
sources/domain_layer/json_parser/: json_parser.cpp  json_parser.h
sources/domain_layer/message_handler/: message_handler.cpp  message_handler.h
sources/domain_layer/message_manager/: message_manager.cpp  message_manager.h
sources/domain_layer/request_resolver/: request_resolver.cpp  request_resolver.h
sources/domain_layer/server_app/: server_app.cpp  server_app.h
sources/main/: main.cpp
sources/network_layer/client_connection/: client_connection.cpp  client_connection.h
sources/network_layer/network_manager/: network_manager.cpp  network_manager.h
tests/domain_layer/: json_parser_test.cpp
